# ChaCha20-OpenMP-CUDA

./: .clang-tidy  CMakeLists.txt  README.md
CPU/: chacha20_cpu.cpp  chacha20_cpu.h
CUDA/: chacha20_cuda.cu  chacha20_cuda.cuh
OpenMP/: chacha20_omp.cpp  chacha20_omp.h
lib/: ChaCha20Interface.h  fileOperations.h
sprawozdanie/: sprawozdanie.dokuwiki
src/: main.cpp
